<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">音乐</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song">歌曲列表</string>
    <string name="title_name">搜索音乐</string>
    <string name="song">歌曲名</string>
    <string name="singer">艺术家</string>
    <string name="search">搜索</string>
    <string name="down">下载</string>
    <string name="view">查看</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="exit">退出</string>
    <string name="previous">&#60;</string>
    <string name="next">&#62;</string>
    <string name="close">&#215;</string>
    <string name="saveButton">保存</string>
    <string name="LrcButton">插入</string>
    <string name="clsButton">还原</string>
    <string name="LineTopButton">首行</string>
    <string name="LineCenterButton">中行</string>
    <string name="LineBottomButton">尾行</string>    
    <string name="deleButton">删除</string>
    <string name="sureButton">确定</string>
    <string name="editButton">修改</string>
    <string name="cleanButton">清空</string>
    <string name="cancelButton">取消</string>
    <string name="backButton">返回</string>
    <string name="selectAllButton">全选</string>
    <string name="SelectCancelButton">取消全选</string>
    <string name="title_activity_play">歌曲播放列表</string>
    <string name="title_lrc_content">歌词内容</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_prompt">提示</string>
    <string name="title_must_select_one">请至少选择一项！</string>
    <string name="title_successful_operation">操作成功！</string>
    <string name="title_copied">已复制</string>
    <string name="title_download_successful">下载成功，开始播放</string>
    <string name="title_available_download">不提供下载</string>
    <string name="title_File">文件</string> 
    <string name="title_Already_exists_play_now">已经存在，立即播放</string>
    <string name="title_choose_play">选择播放</string>
    <string name="title_song_empty">歌曲名不能为空</string>
    <string name="title_singer_empty">艺术家不能为空</string>
    <string name="title_search_down">歌曲搜索下载中...</string>
    <string name="title_selected_list">选中列表项：</string>
    <string name="title_click_event">触发事件</string>
    <string name="title_selected_remove">选中 %1$d 项 ， 确定要删除吗</string>
    <string name="title_now_play_song">正在播放  %1$s</string> 

</resources>