<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2,3">

        <TableRow android:layout_marginLeft="1dp" android:layout_marginRight="1dp" android:background="@drawable/transparent">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/black"
                android:onClick="onSelectAllClicked"
                android:text="@string/selectAllButton"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/black"
                android:onClick="showSelectEvent"
                android:text="@string/deleButton"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/black"
                android:onClick="onSearchClicked"
                android:text="@string/search"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/black"
                android:onClick="onPlayClicked"
                android:text="@string/play"
                android:textColor="#FFF" />
        </TableRow>
    </TableLayout>

</LinearLayout>